# llmsdk

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md  todo.md
.cargo/: config.toml
.opencode/commands/: port.md  provider.md
architecture/: 0001-trait-design.md  0002-middleware-design.md  0003-m10-design.md  0004-m11-responses-design.md  0005-m12-anthropic-full-design.md  0006-m13-design.md
crates/llmsdk/: Cargo.toml
crates/llmsdk-amazon-bedrock/: Cargo.toml
crates/llmsdk-amazon-bedrock/src/: config.rs  lib.rs  sigv4_auth.rs
crates/llmsdk-anthropic/: Cargo.toml
crates/llmsdk-anthropic-aws/: Cargo.toml
crates/llmsdk-anthropic-aws/src/: auth.rs  config.rs  lib.rs
crates/llmsdk-anthropic-aws/tests/: contract_auth.rs  contract_messages.rs
crates/llmsdk-anthropic/examples/: README.md  anthropic_smoke.rs
crates/llmsdk-anthropic/src/: auth.rs  config.rs  error.rs  forward_container_id.rs  lib.rs  model_capabilities.rs
crates/llmsdk-anthropic/src/files/: mod.rs  model.rs  wire.rs
crates/llmsdk-anthropic/src/messages/: convert_prompt.rs  finish_reason.rs  mod.rs  model.rs  options.rs  parse_response.rs  sanitize_json_schema.rs  stream.rs  stream_event.rs  usage.rs  wire.rs
crates/llmsdk-anthropic/src/skills/: mod.rs  model.rs  wire.rs
crates/llmsdk-anthropic/src/tools/: advisor.rs  common.rs  computer.rs  mod.rs  no_args.rs  text_editor.rs  web_fetch.rs  web_search.rs
crates/llmsdk-anthropic/tests/: contract_files.rs  contract_messages_basic.rs  contract_messages_options.rs  contract_messages_provider_executed_tools.rs  contract_messages_stream.rs  contract_messages_thinking.rs  contract_skills.rs  contract_tools_typed.rs
crates/llmsdk-azure/: Cargo.toml
crates/llmsdk-azure/src/: config.rs  lib.rs  tools.rs
crates/llmsdk-azure/tests/: contract_chat_basic.rs  contract_embed_basic.rs  contract_namespace.rs  contract_url_construction.rs
crates/llmsdk-cohere/: Cargo.toml
crates/llmsdk-cohere/src/: config.rs  lib.rs
crates/llmsdk-google/: Cargo.toml
crates/llmsdk-google-vertex/: Cargo.toml
crates/llmsdk-google-vertex/src/: anthropic.rs  auth.rs  config.rs  embedding.rs  image.rs  language.rs  lib.rs  maas.rs  tools.rs  video.rs  xai.rs
crates/llmsdk-google-vertex/tests/: contract_anthropic.rs  contract_embedding.rs  contract_express_mode.rs  contract_image.rs  contract_language.rs  contract_video.rs  contract_xai_maas.rs
crates/llmsdk-google/src/: base64.rs  config.rs  error.rs  lib.rs  schema.rs
crates/llmsdk-google/src/embedding/: mod.rs  model.rs  options.rs  wire.rs
crates/llmsdk-google/src/files/: mod.rs  model.rs  options.rs  wire.rs
crates/llmsdk-google/src/image/: mod.rs  model.rs  options.rs  wire.rs
crates/llmsdk-google/src/interactions/: extract_sources.rs  mod.rs  model.rs  prepare_tools.rs  stream.rs  synthesize_stream.rs
crates/llmsdk-google/src/language/: accumulator.rs  convert_prompt.rs  finish_reason.rs  mod.rs  model.rs  options.rs  parse_response.rs  prepare_tools.rs  stream.rs  usage.rs  wire.rs
crates/llmsdk-google/src/tools/: mod.rs
crates/llmsdk-google/src/video/: mod.rs  model.rs  options.rs  wire.rs
crates/llmsdk-google/tests/: contract_embed_basic.rs  contract_files.rs  contract_image_basic.rs  contract_interactions.rs  contract_language_advanced.rs  contract_language_basic.rs  contract_language_options.rs  contract_language_stream.rs  contract_language_tools.rs  contract_tools_typed.rs  contract_video.rs
crates/llmsdk-mistral/: Cargo.toml
crates/llmsdk-openai/: Cargo.toml
crates/llmsdk-openai/examples/: README.md  openai_smoke.rs
crates/llmsdk-openai/src/: config.rs  embedding.rs  error.rs  image.rs  lib.rs
crates/llmsdk-openai/src/chat/: capabilities.rs  convert_prompt.rs  finish_reason.rs  mod.rs  model.rs  options.rs  parse_response.rs  stream.rs  stream_chunk.rs  usage.rs  wire.rs
crates/llmsdk-openai/src/completion/: mod.rs  model.rs
crates/llmsdk-openai/src/files/: mod.rs  model.rs  wire.rs
crates/llmsdk-openai/src/responses/: convert_prompt.rs  finish_reason.rs  mod.rs  model.rs  options.rs  parse_response.rs  prepare_tools.rs  stream.rs  usage.rs
crates/llmsdk-openai/src/responses/tools/: apply_patch.rs  code_interpreter.rs  custom.rs  file_search.rs  image_generation.rs  local_shell.rs  mcp.rs  mod.rs  shell.rs  tool_search.rs  web_search.rs  web_search_preview.rs
crates/llmsdk-openai/src/responses/wire/: chunk.rs  mod.rs  request.rs  response.rs
crates/llmsdk-openai/src/skills/: mod.rs  model.rs  wire.rs
crates/llmsdk-openai/src/speech/: mod.rs  model.rs
crates/llmsdk-openai/src/transcription/: mod.rs  model.rs
crates/llmsdk-openai/tests/: contract_chat_advanced.rs  contract_chat_basic.rs  contract_chat_stream.rs  contract_embed_basic.rs  contract_image_basic.rs  contract_responses_advanced.rs  contract_responses_basic.rs  contract_responses_options.rs  contract_responses_stream.rs  contract_responses_tools.rs
crates/llmsdk-provider/: Cargo.toml
crates/llmsdk-provider-utils/: Cargo.toml
crates/llmsdk-provider-utils/src/: api_key.rs  aws_eventstream.rs  aws_sigv4.rs  headers.rs  http.rs  lib.rs  multipart.rs  sse.rs  time.rs
crates/llmsdk-provider-utils/tests/: http.rs  sse.rs
crates/llmsdk-provider/src/: embedding_model.rs  error.rs  files_model.rs  image_model.rs  json.rs  lib.rs  provider.rs  reranking_model.rs  shared.rs  skills_model.rs  speech_model.rs  transcription_model.rs  video_model.rs
crates/llmsdk-provider/src/language_model/: call_options.rs  content.rs  finish_reason.rs  mod.rs  prompt.rs  result.rs  stream_part.rs  tool.rs  usage.rs
crates/llmsdk-provider/src/middleware/: cache.rs  context.rs  embedding_model.rs  image_model.rs  language_model.rs  logging.rs  mod.rs  provider.rs  reranking_model.rs  retry.rs  video_model.rs
crates/llmsdk-provider/src/middleware/builtin/: add_tool_input_examples.rs  default_embedding_settings.rs  default_settings.rs  extract_json.rs  extract_reasoning.rs  mod.rs  simulate_streaming.rs
crates/llmsdk-xai/: Cargo.toml
crates/llmsdk/src/: lib.rs
(+137 files in other folders)
