[workspace]
resolver = "3"
members = ["crates/llmsdk-amazon-bedrock","crates/llmsdk-anthropic","crates/llmsdk-anthropic-aws","crates/llmsdk-azure","crates/llmsdk-cohere","crates/llmsdk-google","crates/llmsdk-google-vertex","crates/llmsdk-mistral","crates/llmsdk-openai","crates/llmsdk-provider", "crates/llmsdk-provider-utils","crates/llmsdk-xai"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/zerx-lab/llmsdk"

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
# Restriction lints
allow_attributes_without_reason = "warn"
clone_on_ref_ptr = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
map_err_ignore = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"

undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
# May cause issues with structured logging otherwise.
literal_string_with_formatting_args = "allow"
# Allow long doc summary if needed (M-FIRST-DOC-SENTENCE handled by review).
module_name_repetitions = "allow"
