[package]
name = "llmsdk-anthropic-aws"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Claude Platform on AWS provider for llmsdk (Rust port of @ai-sdk/anthropic-aws)"

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
llmsdk-anthropic = { version = "0.1.1", path = "../llmsdk-anthropic" }
llmsdk-provider = { version = "0.1.1", path = "../llmsdk-provider" }
llmsdk-provider-utils = { version = "0.1.1", path = "../llmsdk-provider-utils", features = ["aws-sigv4"] }

[dev-dependencies]
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt", "rt-multi-thread"] }
wiremock = "0.6.5"
