[package]
name = "llmsdk-google-vertex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Google Vertex AI provider for llmsdk (Rust port of @ai-sdk/google-vertex)"

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
bytes = "1.10.1"
futures = "0.3.32"
gcp_auth = "0.12.6"
llmsdk-anthropic = { version = "0.1.0", path = "../llmsdk-anthropic" }
llmsdk-google = { version = "0.1.0", path = "../llmsdk-google" }
llmsdk-openai = { version = "0.1.0", path = "../llmsdk-openai" }
llmsdk-provider = { version = "0.1.0", path = "../llmsdk-provider" }
llmsdk-provider-utils = { version = "0.1.0", path = "../llmsdk-provider-utils" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["sync", "time"] }

[dev-dependencies]
futures = "0.3.32"
tokio = { version = "1.52.3", features = ["macros", "rt", "rt-multi-thread"] }
wiremock = "0.6.5"
